@@ -3,7 +3,7 @@
 \alias{sigma.hat}
 \alias{sigma.hat,lm-method}
 \alias{sigma.hat,glm-method}
-\alias{sigma.hat,mer-method}
+\alias{sigma.hat,merMod-method}
 \alias{sigma.hat,sim-method}
 \alias{sigma.hat,sim.mer-method}
 
@@ -19,7 +19,7 @@ sigma.hat(object,\dots)
 
 \S4method{sigma.hat}{lm}(object)
 \S4method{sigma.hat}{glm}(object)
-\S4method{sigma.hat}{mer}(object)
+\S4method{sigma.hat}{merMod}(object)
 \S4method{sigma.hat}{sim}(object)
 \S4method{sigma.hat}{sim.mer}(object)
 
